refactor get all chats response type